force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxApiBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BoxApiBaseUrl__c</fullName>
    <defaultValue>&quot;https://api.box.com&quot;</defaultValue>
    <label>Box Api Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>