force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxAuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>BoxAuthProviderName__c</fullName>
    <label>Box Auth Provider Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>