force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxClientId__c.field-meta.xml
<CustomField>
    <fullName>BoxClientId__c</fullName>
    <label>Box Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>