force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxSubjectId__c.field-meta.xml
<CustomField>
    <fullName>BoxSubjectId__c</fullName>
    <label>Box Subject Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>