force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxTokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>BoxTokenEndpoint__c</fullName>
    <defaultValue>&quot;/oauth2/token&quot;</defaultValue>
    <label>Box Token Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>