force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxUsersEndpoint__c.field-meta.xml
<CustomField>
    <fullName>BoxUsersEndpoint__c</fullName>
    <defaultValue>&quot;/users/me?fields=id,name,login&quot;</defaultValue>
    <label>Box Users Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>